--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 click==7.1.2
 Flask==1.1.2
 Flask-Cors==3.0.10
+flask-swagger-ui==3.36.0
 greenlet==1.0.0
 importlib-metadata==3.10.0
 itsdangerous==1.1.0
